# mikroprojekt_3_without_GUI

./: CMakeLists.txt  gridTest.txt  main.cpp
include/: AIPlayer.h  HumanPlayer.h  Player.h  TicTacToe.h
src/: HumanPlayer.cpp  Player.cpp  TicTacToe.cpp
